RESOLVED FIXED133237
REGRESSION (iOS WebKit2): Autocorrection is not accurate when changing selection
https://bugs.webkit.org/show_bug.cgi?id=133237
Summary REGRESSION (iOS WebKit2): Autocorrection is not accurate when changing selection
Enrica Casucci
Reported 2014-05-23 14:37:38 PDT
When selection is changed with a gesture in an editable element, we must notify the keyboard in order to make sure the autocorrection engine is aware of the new typing context. <rdar://problem/16655776>
Attachments
Patch (1.67 KB, patch)
2014-05-23 14:41 PDT, Enrica Casucci
rniwa: review+
Enrica Casucci
Comment 1 2014-05-23 14:41:44 PDT
Enrica Casucci
Comment 2 2014-05-23 14:50:22 PDT
Committed revision 169282.
Note You need to log in before you can comment on or make changes to this bug.