REGRESSION (iOS WebKit2): Autocorrection is not accurate when changing selection. https://bugs.webkit.org/show_bug.cgi?id=133237 <rdar://problem/16655776>

Reviewed by Ryosuke Niwa.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView beginSelectionChange]):
(-[WKContentView endSelectionChange]):

When the selection is changed with a gesture in an editable element,
we must notify the keyboard to make sure the autocorrection engine
updates its typing context. WKContentView must implement
beginSelectionChange and endSelectionChange to call into
the keyboard layer.



Canonical link: https://commits.webkit.org/151248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169282 268f45cc-cd09-0410-ab3c-d52691b4dbfc